--- a/main.html
+++ b/main.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>IMDb Movie Detail</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <h1>Movie Title</h1>
 
+    <img src="https://images-cdn.ubuy.co.in/63ef0a397f1d781bea0a2464-star-wars-rogue-one-movie-poster.jpg"
+        alt="Movie Poster" class="moviePic">
+
+    <p class="movieDetail">In the midst of crisis: how can we discover the truth when it seems that the world is being
+        destroyed by uncontrollable forces? Also, to what extent are conspiracy theories our own inventions or products
+        of our imagination?</p>
 </body>
 
 </html>
